[package]
name = "editor"
description = "An Egui-based editor for the render-to-texture crate"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_sprite",
    "tonemapping_luts"
] }
render-to-texture = { path = "../" }

[lints]
workspace = true
